--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 <body>
     <h1> Laboratoriin ajluud</h1>
     <p> text </p>
+    <p>Information technology (IT) is the use of computer systems or devices to access information.
+        Information technology is responsible for such a large portion of our workforce, 
+        business operations and personal access to information that it comprises much of our daily activities.</p>
     <a href="lab1.html"> lab1</a>
     <a href="/lab2.html">lab2</a>
 </body>
