--- a/lab1.html
+++ b/lab1.html
@@ -3,8 +3,10 @@
     <title> Lab 1</title>
 </head>
 <body>
-    <h1>desc</h1>
+    <h1>20B1NUM0291</h1>
+    <P> Lab 7:40</P>
     <p> Information technology (IT) is the use of computer systems or devices to access information.
         Information technology is responsible for such a large portion of our workforce, 
-        business operations and personal access to information that it comprises much of our daily activities.</p>
+        business operations and personal access to information that it comprises much of our daily activities.
+    </p>
 </body>
