--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <head>
-    <title>hi</title>
+    <title>hi, hellouww</title>
 </head>
 <body>
-    <h1> Laboratoriin ajluud</h1>
-    <p> text </p>
-    <p>Information technology (IT) is the use of computer systems or devices to access information.
-        Information technology is responsible for such a large portion of our workforce, 
-        business operations and personal access to information that it comprises much of our daily activities.</p>
-    <a href="lab1.html"> lab1</a>
+    <h1> Хулан. Даш</h1>
+    <h3> Интернэт технологийн үндэс</h3>
+    <p> Хичээлийн гол зорилго нь интернэтийн орчны програмчлалын үндсэн ойлголтуудыг эзэмших, 
+        тухайлбал Вэб хуудас, түүний бүтэц зохион байгуулалт, үүсгэн зохион байгуулах арга, 
+        техник, технологиудыг эзэмшин, тэдгээрийг ашиглан интернэтийн орчинд зохион байгуулагдах 
+        програмчлалын үндсэн асуудлуудыг шийдвэрлэх үндсийг эзэмших явдал болно. </p>
+    <p>Лабораторийн ажлууд</p>
+    <a href="/lab1.html"> lab1</a>
     <a href="/lab2.html">lab2</a>
 </body>
