--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
         техник, технологиудыг эзэмшин, тэдгээрийг ашиглан интернэтийн орчинд зохион байгуулагдах 
         програмчлалын үндсэн асуудлуудыг шийдвэрлэх үндсийг эзэмших явдал болно. </p>
     <p>Лабораторийн ажлууд</p>
-    <a href="/lab1.html"> lab1</a>
-    <a href="/lab2.html">lab2</a>
+    <ul>
+        <li> <a href="/lab1.html"> lab1</a></li>
+        <li> <a href="/lab2.html">lab2</a> </li>
+    </ul>
+
 </body>
