--- a/lab1.html
+++ b/lab1.html
@@ -4,6 +4,7 @@
 </head>
 <body>
     <h1>20B1NUM0291</h1>
+    <h2>Хулан</h2>
     <P> Lab 7:40</P>
     <p> Information technology (IT) is the use of computer systems or devices to access information.
         Information technology is responsible for such a large portion of our workforce, 
