--- a/lab2.html
+++ b/lab2.html
@@ -1,4 +1,8 @@
 <!DOCTYPE html>
 <head>
-    <title> </title>
+    <title> hellouww</title>
 </head>
+<body>
+    <h1>Lab 2</h1>
+    <a href="/jrabitu/lab2/home.html"> Minii tuhai</a>
+</body>
