--- a/lab1.html
+++ b/lab1.html
@@ -7,7 +7,7 @@
     <h2>Хулан</h2>
     <P> Lab 7:40</P>
     <p> Information technology (IT) is the use of computer systems or devices to access information.
-        Information technology is responsible for such a large portion of our workforce, 
-        business operations and personal access to information that it comprises much of our daily activities.
     </p>
+    <p>Information technology is responsible for such a large portion of our workforce, 
+        business operations and personal access to information that it comprises much of our daily activities.</p>
 </body>
