--- a/lab2.html
+++ b/lab2.html
@@ -4,5 +4,5 @@
 </head>
 <body>
     <h1>Lab 2</h1>
-    <a href="/jrabitu/lab2/home.html"> Minii tuhai</a>
+    <a href="/jrabitu/lab2/main.html"> Minii tuhai</a>
 </body>
