--- a/lab2.html
+++ b/lab2.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <head>
-    <title> hellouww</title>
+    <title> Lab 2</title>
 </head>
 <body>
-    <h1>Lab 2</h1>
-    <a href="/jrabitu/lab2/home.html"> Minii tuhai</a>
+    <h1>20B1NUM0291</h1>
+    <h2>Хулан</h2>
+    <h3>2 dugaar laboratoriin ajil:</h3>
+    <P> Lab 7:40</P>
+    <a href="/jrabitu/lab2/main.html"> Minii tuhai</a>
 </body>
