--- a/lab2/aboutme.html
+++ b/lab2/aboutme.html
@@ -4,21 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me</title>
-    <link rel="stylesheet" href="/jrabitu/lab2/styles.css">
 </head>
 <body>
 
     <header>
         <img src="https://i.pinimg.com/736x/0f/9c/f4/0f9cf4ce070a90753b58890814346bde.jpg" alt="Logo">
         <nav>
-        <a href="/jrabitu/lab2/main.html">Home</a>
-        <a href="/jrabitu/lab2/aboutme.html">About Me</a>
-        <a href="/jrabitu/lab2/experience.html">Experience</a>
-        <a href="/jrabitu/lab2/skills.html">Skills</a>
-        <a href="/jrabitu/lab2/contact.html">Contact</a>
+            <table>
+                <tr>
+                    <th><a href="/lab2/main.html">Home</a></th>
+                    <th><a href="/lab2/aboutme.html">About Me</a></th>
+                    <th><a href="/lab2/experience.html">Experience</a></th>
+                    <th><a href="/lab2/skills.html">Skills</a></th>
+                    <th><a href="/lab2/contact.html">Contact</a></th>
+                </tr>
+            </table>
+            
         </nav>
     </header>
-
     <table>
         <tr>
             <td class="content-left">
