--- a/lab2/skills.html
+++ b/lab2/skills.html
@@ -2,6 +2,17 @@
 <head>
     <meta charset="utf-8">
     <title>imhulan</title>
+    <nav>
+      <table>
+          <tr>
+              <th><a href="lab2/main.html">Home</a></th>
+              <th><a href="lab2/aboutme.html">About Me</a></th>
+              <th><a href="lab2/experience.html">Experience</a></th>
+              <th><a href="lab2/skills.html">Skills</a></th>
+              <th><a href="lab2/contact.html">Contact</a></th>
+          </tr>
+      </table> 
+  </nav>
     <style>
         table, th, td {
           border: 1px solid black;
