--- a/lab2.html
+++ b/lab2.html
@@ -7,5 +7,5 @@
     <h2>Хулан</h2>
     <h3>2 dugaar laboratoriin ajil:</h3>
     <P> Lab 7:40</P>
-    <a href="lab2/main.html"> Minii tuhai</a>
+    <a href="/jrabitu/lab2/main.html"> Minii tuhai</a>
 </body>
