--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         програмчлалын үндсэн асуудлуудыг шийдвэрлэх үндсийг эзэмших явдал болно. </p>
     <p>Лабораторийн ажлууд</p>
     <ul>
-        <li> <a href="lab1.html"> lab1</a></li>
-        <li> <a href="lab2.html">lab2</a> </li>
+        <li> <a href="/jrabitu/lab1.html"> lab1</a></li>
+        <li> <a href="/jrabitu/lab2.html">lab2</a> </li>
     
     </ul>
     
