--- a/lab2/main.html
+++ b/lab2/main.html
@@ -50,8 +50,9 @@
                 <td width="10%"><img src="https://i.pinimg.com/236x/8a/1c/61/8a1c61bae04ccab67baf13f9db09b304.jpg" width="150" height="150"></td>
                 <td  width="75%" colspan="4">
                     <font size="30" color="415a77"></font>
+                    <iframe width="460" height="215" src="https://www.youtube.com/embed/DEWzT1geuPU?si=5IszsLU6AYmEDgeQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay;center; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 </td>
-                
+        
             </tr>            
             <tr>
                 <td width="20%">
