--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
         тухайлбал Вэб хуудас, түүний бүтэц зохион байгуулалт, үүсгэн зохион байгуулах арга, 
         техник, технологиудыг эзэмшин, тэдгээрийг ашиглан интернэтийн орчинд зохион байгуулагдах 
         програмчлалын үндсэн асуудлуудыг шийдвэрлэх үндсийг эзэмших явдал болно. </p>
-    <p>Лабораторийн ажлууд</p>
+    <p>Лабораторийн ажлууд:</p>
     <ul>
-        <li> <a href="/lab1.html">lab1</a></li>
-        <li> <a href="/lab2.html">lab2</a></li>
-        <li> <a href="/lab3.html">lab3</a></li>
+        <li> <a href="/jrabitu/lab1.html">lab1</a></li>
+        <li> <a href="/jrabitu/lab2.html">lab2</a></li>
+        <li> <a href="/jrabitu/lab3.html">lab3</a></li>
     
     </ul>
     
