--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <li> <a href="/jrabitu/lab1.html">lab1</a></li>
         <li> <a href="/jrabitu/lab2.html">lab2</a></li>
         <li> <a href="/jrabitu/lab3.html">lab3</a></li>
+        <li> <a href="/jrabitu/lab4.html">lab3</a></li>
     
     </ul>
     
