--- a/lab2/main.html
+++ b/lab2/main.html
@@ -99,4 +99,7 @@
             </tr>
 
         </table>
+        <footer>
+            <p style="text-align: center; color: antiquewhite;">&copy; 2024 Khulan</p>
+          </footer>
     </body>
