--- a/lab2/aboutme.html
+++ b/lab2/aboutme.html
@@ -40,11 +40,11 @@
         <table border="1.5" width="100%" cellpadding="3">
 
             <tr bgcolor="#aec3b0" align="center">
-                <td><a href="/jrabitu/lab2/main.html">Home</a></td>
-                <td><a href="/jrabitu/lab2/aboutme.html">About Me</a></td>
-                <td><a href="/jrabitu/lab2/hobby.html">Hobby</a></td>
-                <td><a href="/jrabitu/lab2/skills.html">Skills</a></td>
-                <td><a href="/jrabitu/lab2/contact.html">Contact</a></td>
+                <td><a href="main.html">Home</a></td>
+                <td><a href="aboutme.html">About Me</a></td>
+                <td><a href="hobby.html">Hobby</a></td>
+                <td><a href="skills.html">Skills</a></td>
+                <td><a href="contact.html">Contact</a></td>
             </tr>
             <tr>
                 <td width="10%"><img src="https://i.pinimg.com/236x/8a/1c/61/8a1c61bae04ccab67baf13f9db09b304.jpg" width="150" height="150"></td>
