--- a/lab5/lab5.html
+++ b/lab5/lab5.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <head>
+    <meta charset="UTF-8">
+    <meta>
     <title>hi, hellouww</title>
+
 </head>
 <body>
     <div class="container">
