--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
         програмчлалын үндсэн асуудлуудыг шийдвэрлэх үндсийг эзэмших явдал болно. </p>
     <p>Лабораторийн ажлууд:</p>
     <ul>
-        <li> <a href="/jrabitu/lab1.html">lab1</a></li>
-        <li> <a href="/jrabitu/lab2.html">lab2</a></li>
-        <li> <a href="/jrabitu/lab3.html">lab3</a></li>
-        <li> <a href="/jrabitu/lab4.html">lab4</a></li>
+        <li> <a href="lab1.html">lab1</a></li>
+        <li> <a href="lab2.html">lab2</a></li>
+        <li> <a href="lab3.html">lab3</a></li>
+        <li> <a href="lab4.html">lab4</a></li>
+        <li> <a href="lab5.html">lab5</a></li>
     
     </ul>
     
