--- a/lab5.html
+++ b/lab5.html
@@ -1,19 +1,11 @@
 <!DOCTYPE html>
 <head>
-    <meta charset="UTF-8">
-    <meta>
-    <title>hi, hellouww</title>
-
+    <title> Lab 5</title>
 </head>
 <body>
-    <div class="container">
-        <div class="text">text1</div>
-        <div class="text">text2</div>
-        <div class="text">text3</div>
-        <div class="text">text4</div>
-        <div class="text">text5</div>
-        <div class="text">text6</div>
-        <div class="text">text7</div>
-        <div class="text">text8</div>
-    </div>
+    <h1>20B1NUM0291</h1>
+    <h2>Хулан</h2>
+    <P> Lab 7:40</P>
+    <p> Энэхүү лабораторийн ажлаар вэб загварыг HTML ашиглан бүтцийг нь гаргана. </p>
+    <p> <a href="./lab5/index.html">Lab 5</a></p>
 </body>
