--- a/lab5/index.html
+++ b/lab5/index.html
@@ -9,6 +9,6 @@
     <p>Даалгаврууд:</p>
     <ul>
         <li>1. <a href="https://drive.google.com/file/d/19eW0jueirUrP93quspTfcIpWQHhGYEuY/view?usp=drive_link"> css selector</a></li>
-        <li>2. <a href="./lab4/index.html"></a></li>
+        <li>2. <a href="/jrabitu/lab4/index.html"></a></li>
     </ul>
 </body>
