--- a/lab5.html
+++ b/lab5.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
     <title> Lab 5</title>
+    <link rel="stylesheet" type="text/css" href="./css/lab5style.css">
 </head>
 <body>
-    <h1>20B1NUM0291</h1>
-    <h2>Хулан</h2>
-    <P> Lab 7:40</P>
-    <p> Энэхүү лабораторийн ажлаар вэб загварыг HTML ашиглан бүтцийг нь гаргана. </p>
-    <p> <a href="./lab5/index.html">Lab 5</a></p>
+    <header>
+       <p class="headp">Webjunto</p>
+    </header>
 </body>
