--- a/lab4.html
+++ b/lab4.html
@@ -8,8 +8,8 @@
         <link rel="preload" href="AghitaRegular.woff2" as="font" type="font/woff2" crossorigin>
     </head>
     <body>
-        <div class="background">
-        </div>
+        <!-- <div class="background">
+        </div> -->
         <div class="container">
             <div class="left_side">
                 <div class="profilez">
@@ -47,11 +47,11 @@
                     <h3 class="title"> Education </h3>
                     <ul>
                         <li>
-                            <h4> High school</h4>
+                            <h3> High school</h3>
                             <h4> Laboratoy school 142</h4>
                         </li>
                         <li>
-                            <h4> University</h4>
+                            <h3> University</h3>
                             <h4> Majoring degree in Information Technology</h4>
                             <h4> National University in Mongolia</h4>
                         </li>
@@ -69,13 +69,13 @@
                             </span>
                         </li>
                         <li>
-                            <span class="text">Korean TOPIK 5</span>
+                            <span class="text">Korean</span>
                             <span class="percent">
                                 <div style="width: 55%;"></div>
                             </span>
                         </li>
                         <li>
-                            <span class="text">Japanese JLPT N4</span>
+                            <span class="text">Japanese</span>
                             <span class="percent">
                                 <div style="width: 15%;"></div>
                             </span>
@@ -154,6 +154,40 @@
                     </div>
                 </div>
 
+
+                <div class="about skills">
+                    <h1 class="title2">Skills</h1>
+                    <div class="box">
+                        <h4>HTML</h4>
+                        <div class="percent">
+                            <div style="width: 25%;"></div>
+                        </div>
+                    </div>
+
+                    <div class="box">
+                        <h4>CSS</h4>
+                        <div class="percent">
+                            <div style="width: 20%;"></div>
+                        </div>
+                            
+                    </div>
+
+                    <div class="box">
+                        <h4>powerpoint</h4>
+                        <div class="percent">
+                            <div style="width: 75%;"></div>
+                        </div>
+                    </div>
+
+                    <div class="box">
+                        <h4>Aegisub</h4>
+                        <div class="percent">
+                            <div style="width: 85%;"></div>
+                        </div>
+                    </div>
+                </div>
+
+                <img src="/jrabitu/pic/output-onlinegiftools.gif" style="height:150px; margin-left: 150px; margin-top: -80px;"/>
             </div>
         </div>
     </body>
