--- a/lab5.html
+++ b/lab5.html
@@ -5,7 +5,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
     <title> Lab 5</title>
-    <link rel="stylesheet" type="text/css" href="./css/lab5style.css">
+    <link rel="stylesheet" type="text/css" href="./css/lab5cssdemo.css">
 </head>
 <body>
     <header>
@@ -22,6 +22,7 @@
     <div class="maincontainer">
         <div class="lefttcontent">
             <h1 class="title2">Heading goes here</h1>
+            <hr class="solid">
             <p class="para2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores accusamus ipsa beatae, nam iste, dolor possimus enim explicabo debitis quia amet, neque ducimus dolorum. Unde quasi obcaecati in quas illum!</p>
             
             <div class="videocontent"> 
@@ -43,12 +44,12 @@
                     <p class="welcome-text">You are a Starfleet Academy candidate. Greet the Captain in a respectful fashion.</p>
                     <input type="text" class="welcome-input" placeholder="Input your greeting...">
                     <button class="send-btn">SEND</button>
-                    <h6 class="bottom">i don't watch!</h6>
+                    <h6 class="bottom"><a href="#">I don't watch!</a></h6>
+
             </div>
         
             <div class="vote">
-                    <h3 class="vote-title">Cast your vote!</h3>
-                    <p class="vote-text">What do you think about space? See vote progress below!</p>
+                    <h3 class="vote-title">Cast your vote! What do you think about space? See vote progress below!</h3>
                     <span class="percent">
                         <div style="width: 75%;"></div>
                     </span>
