lab link nemelt

--- a/index.html
+++ b/index.html
@@ -11,11 +11,14 @@
         програмчлалын үндсэн асуудлуудыг шийдвэрлэх үндсийг эзэмших явдал болно. </p>
     <p>Лабораторийн ажлууд:</p>
     <ul>
-        <li> <a href="lab1.html">lab1</a></li>
-        <li> <a href="lab2.html">lab2</a></li>
-        <li> <a href="lab3.html">lab3</a></li>
-        <li> <a href="lab4.html">lab4</a></li>
-        <li> <a href="lab5.html">lab5</a></li>
+        <li> <a href="./lab1.html">lab1</a></li>
+        <li> <a href="./lab2.html">lab2</a></li>
+        <li> <a href="./lab3.html">lab3</a></li>
+        <li> <a href="./lab4.html">lab4</a></li>
+        <li> <a href="./lab5.html">lab5</a></li>
+        <li> <a href="./lab6.html">lab6</a></li>
+        <li> <a href="./lab7.html">lab7</a></li>
+        <li> <a href="./lab8.html">lab8</a></li>
     
     </ul>
     
