--- a/lab9.html
+++ b/lab9.html
@@ -1,20 +1,38 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hangman Game</title>
+    <title>Lab - 9 Hangman Game</title>
+    <link rel="icon" type="image/icon" href="assets/img/favicon.png" />
     <link rel="stylesheet" href="./css/lab9style.css">
+    <script src="./js/lab9.js"></script>
 </head>
 <body>
-    <div class="game-container">
+    <div class="main-container">
         <h1>Hangman Game</h1>
-        <div id="hangman-drawing"></div>
-        <div id="question"></div>
-        <div id="word"></div>
-        <div id="keyboard"></div>
-        <p id="message"></p>
+        <p class="durem">
+            Өгсөн сэдвийн дагуу үсгэн дээр дарж үгийг таагаарай. <br/>
+            Хэрэв буруу үсэг байвал хүний биеийн нэг хэсэг зурагдах бөгөөд <br/>
+            Хүн бүрэн зурагдсан тохиолдолд хожигдох болно. <br/>
+            Нийт 5 амьтай байна. <br/>
+        </p>
+
+        <p class="sedew"> </p>
+        <div class="useg"></div>
+        <p class="ug"></p>
+        <p class="ami"></p>
+
+        <div class="bttn">
+            <button type="button" class="hint-button">Хинт</button>
+            <button type="button" class="reset-button">Дахин эхлэх</button>
+        </div>
     </div>
-    <script src="./js/lab9.js"></script>
+
+    <div class="game-container"> <!--model backdrop-->
+    <div id="hangman"></div> <!--model wrap--> 
+        <div id="question"></div> <!--model text-->
+        <button type="button" class="close">Хаах</button>
+    </div>
 </body>
 </html>
